<resources>
    <string name="app_name">Mit Mca</string>
    <string name="login">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MIT-WPU</string>
    <string name="nav_header_subtitle">Kothrud</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_news_events">News and Events</string>
    <string name="menu_maps">Maps</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_timetable">Time Table</string>
    <string name="menu_qtspaper">Question Paper</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_qr">Attendance</string>
    <string name="menu_forums">Forums</string>
    <string name="menu_links">Links</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_logut">Logout</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
</resources>
