<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item

            android:id="@+id/nav_news"
            android:icon="@drawable/event1"
            android:title="@string/menu_news_events" />
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/maps1"
            android:title="@string/menu_maps" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/calendar1"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_qtspaper"
            android:icon="@drawable/papes1"
            android:title="@string/menu_qtspaper" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/contact1"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/nav_att"
            android:icon="@drawable/attendance1"
            android:title="@string/menu_att" />
        <item
            android:id="@+id/nav_forums"
            android:icon="@drawable/forum1"
            android:title="@string/menu_forums" />
        <item
            android:id="@+id/nav_links"
            android:icon="@drawable/links1"
            android:title="@string/menu_links" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/setting"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />
    </group>

  <!--  <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>
-->
</menu>
