<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mitmca.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_news"
        android:name="com.example.mitmca.fragments.NewsFragment"
        android:label="News"
        tools:layout="@layout/activity_news_main" />

    <fragment
        android:id="@+id/nav_qr"
        android:name="com.example.mitmca.fragments.AttendanceFragment"
        android:label="Attendance"
        tools:layout="@layout/activity_main" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.mitmca.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.mitmca.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

<!--    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.mitmca.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.mitmca.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
-->

</navigation>